# tds-project-2

./: .gitignore  LICENSE.txt  curl.sh  main.py  pyproject.toml  requirements.txt
app/: app.py  get_metadata.py  highest_grossing_films.csv  langgraph_pipeline.py  llm_utils.py  main.py  modified_task.txt  pipelines_utils.py  tasks.json
app/codes/task1/: code.py  code1.py  code2.py  error0.txt  error1.txt
app/codes/task2/: code0.py  code1.py
app/prompts/: debug_code.txt  debug_dependencies.txt  explain_error.txt  get_image_prompt.txt  get_metadata.txt  include_dependencies.txt  modify_task.txt  task_breakdown.txt  writing_code.txt
app/services/: llm_utils.py  pipelines_utils.py
bin(m-block-warden)/: highest_grossing_films_processed.csv  langgraph.py  result_q3_correlation.txt  result_q4_plot_base64.txt  tasks.json
bin(m-block-warden)/codes/task2/: code2.py  error0.txt
bin(m-block-warden)/codes/task3/: code1.py
bin(m-block-warden)/codes/task4/: code1.py  code2.py
bin(m-block-warden)/codes/task5/: code0.py
bin(m-block-warden)/sample_tasks_gemini/: tasks21.json
m_block_warden/: best_breakdown.json  final_answers.json  main.py  question1soln.py  result2.csv  result6.txt
m_block_warden/codes/task1/: code0.py
m_block_warden/sample_tasks_gemini/: tasks22.json
prompts/: debug_code.txt  debug_new.txt  final_check.txt  generate_dummy.txt  include_dependencies.txt  task_breakdown.txt  writing_code.txt
services/: get_metadata.py  llm_utils.py  pipelines_utils.py
tools/: langgraph_pipeline.py  list_units.py  save_base64.py  scrape_website.py  tests.py
(+6 files in other folders)
